[tool.poetry]
name = "rasierwasser"
version = "0.1.12"
description = "Simple pip repository server for internal usage"
authors = ["voidpointercast <patrick.daniel.gress@gmail.com>"]
license = "GPLv3"
repository = "https://github.com/voidpointercast/rasierwasser"

[tool.poetry.dependencies]
python = ">=3.8"
Flask = "^2.0.1"
pydantic = "^1.8.2"
SQLAlchemy = "^1.4.17"
pyOpenSSL = "^20.0.1"
fastapi = "^0.65.1"
Jinja2 = "^3.0.1"
PyYAML = "^5.4.1"
toml = "^0.10.2"
uvicorn = "^0.14.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
uvicorn = "^0.14.0"
requests = "^2.25.1"
virtualenv = "^20.4.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rasierwasser = 'rasierwasser.service.server:main'
rasierwasser_sign = 'rasierwasser.helper.signing:main'

[tool.poetry.extras]
mysql = ["mysqlclient"]
pgsql = ["psycopg2"]
oracle = ["cx_oracle"]